# fire-prox

./: AGENTS.md  Architectural_Blueprint.md  README.md  STATUS.md  data.json  firebase.json  mkdocs.yml  nb.sh  package.json  pyproject.toml  pyrightconfig.json  pyrightconfig.negative.json  test_notebooks.sh
.claude/: settings.local.json
docs/: Architectural_Blueprint.md  BATCHES_IMPLEMENTATION_REPORT.md  HUMANS.md  Implementation_Log.md  PHASE2_5_IMPLEMENTATION_REPORT.md  PHASE2_6_IMPLEMENTATION_REPORT_SELECT.md  PHASE3_IMPLEMENTATION_REPORT.md  PHASE4_SELECT_IMPLEMENTATION_REPORT.md  Post_Hoc_Schema_Extended_Report.md  Post_Hoc_Schema_Proposal.md  agent.md  code_reuse_report.md  fireprox_code_reuse_review.md  fireprox_logic_review.md  index.md  phase1_demo_async.ipynb  phase1_demo_sync.ipynb  render_logs.py  testing_analysis.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_92ccb17935fec186___init___py.html  z_92ccb17935fec186_aggregation_py.html  z_92ccb17935fec186_async_fire_collection_py.html  z_92ccb17935fec186_async_fire_object_py.html  z_92ccb17935fec186_async_fire_query_py.html  z_92ccb17935fec186_async_fireprox_py.html  z_92ccb17935fec186_base_fire_collection_py.html  z_92ccb17935fec186_base_fire_object_py.html  z_92ccb17935fec186_base_fireprox_py.html  z_92ccb17935fec186_fire_collection_py.html  z_92ccb17935fec186_fire_object_py.html  z_92ccb17935fec186_fire_query_py.html  z_92ccb17935fec186_fire_vector_py.html  z_92ccb17935fec186_fireprox_py.html  z_92ccb17935fec186_state_py.html  z_aa0f978151671e1d___init___py.html
(+90 files in other folders)
